# pyapi

./: .gitignore  Pipfile  README.md  app.cfg  setup.cfg
cli/: __init__.py
shared/: conf.py  log.py
tests/: test_cli.py
