[metadata]
name            = pyapi
version         = 0.0.1
description     = Generic API with CLI interface
author_email    = nazadelucca@gmail.com

[options]
packages = find:

python_requires = >=3.9.6

install_requires =
    click           == 8.0.1

[options.entry_points]
console_scripts =
    pyapi = cli:main
